<?xml version="1.0" encoding="utf-8"?>

<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/delete_pet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/dialog_text_pet_profile"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorAccountDeletion"/>

    <TextView
        android:id="@+id/text_delete_pet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:text="@string/dialog_text_delete"
        android:textColor="@color/colorAccountDeletion"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/cancel_deletion_pet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/dialog_cancel"/>

    <Button
        android:id="@+id/dialog_deletion_confirm_pet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/dialog_confirm"/>


</LinearLayout>