<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <EditText
        android:id="@+id/edit_owner_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/edit_hint_add_onwer_email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/twenty_sp"/>

    <Button
        android:id="@+id/button_confirm_add_owner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_confirm"/>

    <Button
        android:id="@+id/button_add_owner_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_cancel"/>
</LinearLayout>