<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/dialog_pet_profile">

    <EditText
        android:id="@+id/dialog_pet_name"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/dialog_pet_name" />

    <EditText
        android:id="@+id/dialog_pet_notes"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/hint_notes"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/dialog_pet_confirm"
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="15dp"
        android:layout_weight="0"
        android:background="@android:drawable/screen_background_light_transparent"
        android:backgroundTint="@android:color/transparent"
        android:elevation="10dp"
        android:fontFamily="@font/bungee_shade"
        android:text="@string/dialog_confirm"
        android:textAlignment="center" />

    <Button
        android:id="@+id/dialog_pet_cancel"
        android:layout_width="398dp"
        android:layout_height="63dp"
        android:layout_alignEnd="@+id/dialog_pet_confirm"
        android:layout_below="@+id/dialog_pet_confirm"
        android:layout_marginEnd="22dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/bungee_shade"
        android:text="@string/dialog_cancel" />

</LinearLayout>