<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_dialog_deletion"
        android:layout_width="match_parent"
        android:layout_height="162dp"
        android:paddingTop="40dp"
        android:text="@string/dialog_deletion_text"
        android:textColor="@color/colorAccountDeletion"
        android:textSize="20sp"
        tools:fontFamily="@font/rock_salt"
        tools:paddingHorizontal="20dp" />

    <Button
        android:id="@+id/cancel_deletion_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/bungee_shade"
        android:text="@string/dialog_cancel" />

    <Button
        android:id="@+id/dialog_deletion_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/bungee_shade"
        android:text="@string/dialog_confirm" />

</LinearLayout>